--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     background: #f4f6f8;
+
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+main {
+    flex: 1;
 }
 
 /* ---------- HEADER ---------- */
